--- a/css/layout.css
+++ b/css/layout.css
@@ -969,7 +969,7 @@ br {
   padding-right: 100px;
   padding-left: 100px;
 }
-@media (max-width: 1399px) {
+@media (max-width: 1199px) {
   .kv-item {
     padding-right: 4vw;
     padding-left: 0vw;
@@ -989,7 +989,7 @@ br {
   width: 73.33333%;
   max-width: 180px;
 }
-@media (max-width: 1599px) {
+@media (max-width: 1399px) {
   .kv-item__logo img {
     width: 63.33333%;
     max-width: 180px;
@@ -1012,8 +1012,8 @@ br {
 }
 @media (max-width: 1199px) {
   .kv-item__title {
-    font-size: 2.5vw;
-    padding-left: 30px;
+    font-size: 3.2vw;
+    padding-left: 2vw;
   }
 }
 @media (max-width: 767px) {
@@ -1031,14 +1031,14 @@ br {
 }
 
 .kv-img {
-  width: 48%;
-}
-@media (max-width: 1399px) {
-  .kv-img {
-    width: 45%;
-  }
+  width: 46.9%;
 }
 @media (max-width: 991px) {
+  .kv-img {
+    width: 40%;
+  }
+}
+@media (max-width: 767px) {
   .kv-img {
     width: 100%;
   }
@@ -1047,16 +1047,6 @@ br {
 .kv-img img {
   width: 100%;
   margin-left: 25px;
-}
-@media (max-width: 1199px) {
-  .kv-img img {
-    width: 320px;
-  }
-}
-@media (max-width: 991px) {
-  .kv-img img {
-    width: 280px;
-  }
 }
 @media (max-width: 767px) {
   .kv-img img {
