--- a/css/layout.scss
+++ b/css/layout.scss
@@ -72,6 +72,7 @@
 	display: -webkit-inline-box;
 	display: -ms-inline-flexbox;
 	display: inline-flex;
+
 	width: 100%;
 	max-width: 1320px;
 	height: auto;
@@ -108,17 +109,24 @@
 }
 
 .kv-item { 
-	padding-right:100px;
-	padding-left:100px;
+	width: 50%;
 
 	@media (max-width: 1199px){
-		padding-right:4vw;
-		padding-left:0vw;
+		width: 50%;
 	}
 
 	@media (max-width: 767px){
+		width: 100%;
 		padding-top: 30px;
-		padding-right: 0;
+	}
+}
+
+.kv-item__logo{
+	width: 30%;
+
+	@media (max-width: 767px){
+		width: 40%;
+		margin-left: 10%;
 	}
 }
 
@@ -126,19 +134,11 @@
 	display: inline-block;
 	vertical-align: middle;
 	text-align: center;
-	width: 73.33333%;
-	max-width: 180px;
-
-	@media (max-width: 1399px) { 
-		width: 63.33333%;
-		max-width: 180px;
-	}
-
-	
+	width: 100%;
 }
 
 .kv-item__title { 
-	font-size: 30px; 
+	font-size: 50px; 
 	font-weight: 700; 
 	color: #534741; 
 	margin-top: 20px; 
@@ -146,7 +146,6 @@
 	line-height: 1.2; 
 
 	@media (max-width: 1399px) { 
-		font-size: 30px; 
 		margin-top: 20px;
 	}
 
