--- a/css/layout.scss
+++ b/css/layout.scss
@@ -69,8 +69,8 @@
 
 
 .kv-block { 
+	// 
 	display: flex;
-	flex-wrap: wrap;
 
 	width: 100%;
 	max-width: 1320px;
@@ -89,12 +89,12 @@
 	}
 
 	@media (max-width: 991px){
+		flex-wrap: wrap;
 		padding-top: 20px;
 	}
 
 	@media (max-width: 767px){
-		-ms-flex-wrap: wrap;
-		flex-wrap: wrap;
+		
 		height: auto;
 		padding: 20px;
 	}
@@ -103,10 +103,19 @@
 .kv-item { 
 	width: 50%;
 	padding-top: 30px;
+	
+	@media (max-width: 1499px){
+		width: 40%;
+		padding-top: 5%;
+	}
+
+	@media (max-width: 1399px){
+		padding-top: 2%;
+	}
 
 	@media (max-width: 1199px){
 		width: 40%;
-		padding-top: 10%;
+		padding-top: 3%;
 	}
 
 	@media (max-width: 767px){
@@ -116,16 +125,21 @@
 }
 
 	.kv-item__logo{
-		width: 40%;
-		margin-left: 15%;
+		width: 32%;
+		margin-left: 1%;
+		
 
-
-		@media (max-width: 1199px) { 
-			margin-left: 10%;
+		@media (max-width: 1599px) { 
+			width: 32%;
+			margin-left: 5%;
 		}
 
-		@media (max-width: 767px){
-			margin-bottom: 5%;
+		@media (max-width: 1499px) { 
+			width: 28%;
+		}
+
+		@media (max-width: 1199px) { 
+			margin-left: 5%;
 		}
 	}
 
@@ -137,48 +151,49 @@
 	}
 
 	.kv-item__title { 
-		font-size: 45px; 
+		
+		font-size: 38px; 
 		font-weight: 700; 
 		color: #534741;  
 		margin: 40px auto 0;
-		padding-left: 20%;
+		padding-left: 5%;
 		line-height: 1.2; 
 
-		@media (max-width: 1399px) { 
+		@media (max-width: 1599px) { 
+			font-size: 2.2vw; 
+			padding-left: 10%;
 			margin-top: 20px;
 		}
 
+		@media (max-width: 1499px) { 
+			font-size: 2vw; 
+		}
+
 		@media (max-width: 1199px) { 
-			font-size: 3.2vw; 
-			padding-left: 20%;
+			font-size: 2vw; 
+			padding-left: 10%;
 		}
 
 		@media (max-width: 767px) { 
 			padding-left: 0; 
 			margin-top: 5%;
 			margin-bottom: 5%;
-			font-size: 6.8vw;
+			font-size: 5.2vw;
 			text-align: center;
-		}
-
-		@media (max-width: 479px) { 
-			font-size: 6.8vw;
 		}
 	}
 
 .kv-img{
 
-	width: 46.9%;
+	width: 42.9%;
 
-	@media (max-width: 1399px) { 
-		width: 55%;
+	@media (max-width: 1599px) { 
+		width: 32.9%;
 	}
 
-	@media (max-width: 991px) { 
-		
-	}
-
-
+	// @media (max-width: 1399px) { 
+	// 	width: 55%;
+	// }
 	@media (max-width: 767px) {
 		width: 100%;
 	}
@@ -565,20 +580,25 @@
     position: relative;
 }
 
+.good .title-item{
+	padding-bottom:20px;
+
+	@media (max-width: 991px) {
+		padding-bottom: 0px;
+	}
+}
+
 .good-daily__body { 
 	width: 100%; 
 	max-width: 1320px;
 	background: url("../images/good/good-daily-bg.png") no-repeat;
-	background-position: center bottom;
-	background-size: 100% auto;
-	padding: 10px 50px;
+	background-position: center center;
+	background-size: auto 100%;
 	margin: 0 auto; 
 	display: flex;
 	justify-content:center;
 
 	@media (max-width: 1199px){
-		background-size: 100% auto;
-		padding: 2.583333vw 4.166666vw; 
 	}
 
 	@media (max-width: 991px) {
@@ -588,73 +608,34 @@
 		width: 80%;
 		background: url("../images/good/good-daily-bg-sm.png") no-repeat;
 		background-position: center bottom;
-		background-size: 100% auto;
-		padding: 80px 30px 120px 30px;
+		background-size: auto 100%;
+		padding: 80px 30px 80px 30px;
 		margin: 0 auto; 
 	}
 
 	@media (max-width: 767px) {
 		width: 100%;
 		background-size: 100% auto;
-		padding: 60px 30px 80px 30px;
-		margin: 0 auto; 
+		padding: 0px 30px 80px 30px; 
 	}
 
 	@media (max-width: 479px) {
 		background-size: 100% auto;
 		width: 100%;
-		padding: 30px 30px 50px 30px;
+		padding: 0px 30px 50px 30px;
 	}
 
 	@media (max-width: 374px) {
 		width: 100%;
-		padding: 0;
-	}
-}
-
-.good-title__item { 
-	font-size: 40px;
-	margin-top: 0;
-	margin-bottom: 2.5vw;
-	position: absolute;
-	left: 46%;
-	top: 40px;
-
-	@media (max-width: 1199px) {
-		left: 46%;
-		top: 14%;
-		font-size: 2.5vw;
-	}
-	@media (max-width: 991px) {
-		font-size: 2.612903vw;
-		left: 33%;
-		top: 0;
-	}
-	@media (max-width: 767px) {
-		font-size: 4.612903vw;
-		left: 22%;
-		top: 0;
-	}
-	
-	@media (max-width: 575px) {
-		text-align: center;
-		left: 0;
-		top: 0;
-		width: 100%;
-		margin: 0 auto;
-		font-size: 6.8vw;
-
 	}
 }
 
 
 .good-text { 
-	margin-top: 100px;
 	width: 50%;
 	padding-left: 20px;
 
 	@media (max-width: 1199px) {
-		margin-top: 9.166666vw;
 	}
 	@media (max-width: 991px) {
 		width: 100%;
@@ -676,11 +657,11 @@
 	color: #534741; 
 	line-height: 1.6; 
 	align-items: flex-end;
-	padding-top:10%;
+	padding-top:15%;
 
-	@media (max-width: 1199px) {
+	@media (max-width: 1399px) {
 		font-size: 1.66vw; 
-		padding-top:10%;
+		padding-top:13%;
 	}
 
 	@media (max-width: 991px) {
@@ -718,19 +699,24 @@
 }
 
 .good-daily__img {
-	width: 40%; 
+
+	width: 30%; 
+	margin-left: 10%; 
 	z-index: 1; 
 
 	@media (max-width: 991px) {
-		position: relative; 
-		top: auto; 
-		left: auto; 
 		width: 80%; 
+		margin-left: 0; 
 	}
 
 	@media (max-width: 575px) {
 		width: 100%;
-		padding-top: 30px;
+		
+	}
+
+	@media (max-width: 374px) {
+		width: 90%;
+		padding-bottom: 20px;
 		
 	}
 }
